--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Prateema1/Base_NodeJs_Project_Template#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
