--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.5.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
